--- a/compiler/compiler.opam
+++ b/compiler/compiler.opam
@@ -6,9 +6,9 @@ maintainer: ["Julian Kulesh <julian@example.com>"]
 authors: ["Julian Kulesh <julian@example.com>"]
 license: "LICENSE"
 tags: ["add topics" "to describe" "your" "project"]
-homepage: "https://github.com/username/reponame"
+homepage: "https://github.com/raventid/yaecc"
 doc: "https://url/to/documentation"
-bug-reports: "https://github.com/username/reponame/issues"
+bug-reports: "https://github.com/raventid/yaecc/issues"
 depends: [
   "dune" {>= "3.17"}
   "ocaml"
@@ -28,4 +28,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/username/reponame.git"
+dev-repo: "git+https://github.com/raventid/yaecc.git"
